--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,10 @@
-modName=SuggestionProviderFix
-modId=suggestionproviderfix
-modVersion=1.0.0
-group=com.harleyoconnor.suggestionproviderfix
-
-mcVersion=1.19
-forgeVersion=41.0.22
-mappingsVersion=2022.06.05
-
-mixinVersion=0.8.4
-
-curseFileType=release
-
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+loom.platform=fabric
+minecraft.version=1.19.2
+
+mod.name=SuggestionProviderFix
+mod.id=suggestionproviderfix
+mod.version=1.0.0
+mod.group=xyz.deftu
